# datetimepp

./: .travis.yml  CMakeLists.txt  README.md  datetime.h
examples/: 00-showcase.cpp  00-showcase.py  01-timedelta.cpp  02-date.cpp  03-datetime.cpp  04-time.cpp  CMakeLists.txt
test/: CMakeLists.txt  date_test.cpp  datetime_test.cpp  run_test.cpp
